--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html style="margin: 0; min-height: 100%;" lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body >
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
