--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="margin: 0; min-height: 100%; min-width: 380px ; box-sizing: border-box;" lang="en">
+<html style="margin: 0; min-height: 100%; min-width: 380px ;" lang="en">
 
 <head>
   <meta charset="UTF-8" />
