--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/img/logonuevofinal_edited.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rinconcito Musical</title>
+  <meta property="og:image" content="https://source.unsplash.com/random" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
 </head>
