--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/img/logonuevofinal_edited.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rinconcito Musical</title>
+  <meta property="og:image" content="https://res.cloudinary.com/dotkvwxcc/image/upload/v1699936915/06c2ca_89510a5673954dd2810104ca5d32fc70_mv2_bf405633c7.webp" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
